@@ -1,6 +1,7 @@
 import py
 import pytest
 from devpi.list_remove import *
+from devpi import list_remove
 
 @pytest.mark.parametrize(["input", "output"], [
     (["pkg1", "pkg2"], ["*pkg1*", "*pkg2*"]),
@@ -13,27 +14,30 @@ def test_out_index(loghub, input, output):
 @pytest.mark.parametrize(["input", "output"], [
     ({"1.0": {"+files": {"p1-1.0.tar.gz": "root/dev/pkg/1.0/p1-1.0.tar.gz"},},
       "1.1": {"+files": {"p1-1.1.tar.gz": "root/dev/pkg/1.1/p1-1.1.tar.gz"},},
-     },
-    ["*p1-1.1.tar.gz*", "*p1-1.0.tar.gz*",
-    ]),
+     }, ["*p1-1.1.tar.gz*", "*p1-1.0.tar.gz*", ]),
     ({"1.0": {"+files": {"p1-1.0.tar.gz": "root/dev/pkg/1.0/p1-1.0.tar.gz"},
               "+shadowing": [{"+files":
                     {"p1-1.0.tar.gz": "root/prod/pkg/1.0/p1-1.0.tar.gz"}}]}},
     ["*dev*p1-1.0.tar.gz*", "*prod*p1-1.0.tar.gz"]),
 ])
+
 def test_out_project(loghub, input, output, monkeypatch):
-    from devpi import list_remove
     loghub.current.reconfigure(dict(
-                pypisubmit="/post",
                 simpleindex="/index",
                 index="/root/dev/",
-                login="/login",
+                login="/login/",
                 ))
     loghub.args.status = False
+    loghub.args.all = True
     monkeypatch.setattr(list_remove, "query_file_status", lambda *args: None)
     out_project(loghub, input)
     matcher = loghub._getmatcher()
     matcher.fnmatch_lines(output)
+
+    loghub.args.all = False
+    out_project(loghub, input)
+    matcher = loghub._getmatcher()
+    matcher.fnmatch_lines(output[0])
 
 def test_confirm_delete(loghub, monkeypatch):
     loghub.current.reconfigure(dict(
@@ -43,10 +47,10 @@ def test_confirm_delete(loghub, monkeypatch):
                 login="/login",
                 ))
     monkeypatch.setattr(loghub, "ask_confirm", lambda msg: True)
-    data = dict(type="versiondata",
-                result={"+files":
-                    {"x-1.tar.gz": "root/dev/files/x-1.tar.gz"}})
-    assert confirm_delete(loghub, data)
+    class r:
+        result={"+files": {"x-1.tar.gz": "root/dev/files/x-1.tar.gz"}}
+        type = "versiondata"
+    assert confirm_delete(loghub, r)
 
 
 def test_geturl(loghub):
